syntax = ”proto3”;

option java_package = "ex.grpc";

package um;

// Defines the service
service UM {
    // Function invoked to send the request
    rpc sendRequest (UmRequest) returns (UmReply) {}
}

// The request message containing requested numbers
message UmRequest {
    string msg = 1;
}

// The response message containing response
message UmReply {
    string result = 1;
}
